--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://api.fontshare.com/v2/css?f[]=clash-display@200,300,400,500,600,700,1&display=swap"
     rel="stylesheet">
-  <title>Vite + React + TS</title>
+    <link href="https://cdn.sellix.io/static/css/embed.css" rel="stylesheet"/>
+  <title>Valohub</title>
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script src="https://cdn.sellix.io/static/js/embed.js"></script>
 </body>
 
 </html>
