--- a/index.html
+++ b/index.html
@@ -7,8 +7,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://api.fontshare.com/v2/css?f[]=clash-display@200,300,400,500,600,700,1&display=swap"
     rel="stylesheet">
-    <link href="https://cdn.sellix.io/static/css/embed.css" rel="stylesheet"/>
-  <title>Valohub</title>
+  <link href="https://cdn.sellix.io/static/css/embed.css" rel="stylesheet" />
+  <!-- Primary Meta Tags -->
+  <title>ValoHub | Valorant & LOL Accounts</title>
+  <meta name="title" content="ValoHub | Valorant & LOL Accounts" />
+  <meta name="description"
+    content="Purchase Affordable Riot Accounts, We guarantee the lowest of prices. We provide limited offers. Affordable Valorant and LoL Accounts For Sale - Verified / Unverified. 24/7 Support. Many products to chose from." />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <!-- <meta property="og:url" content="https://metatags.io/" /> -->
+  <meta property="og:title" content="ValoHub | Valorant & LOL Accounts" />
+  <meta property="og:description"
+    content="Purchase Affordable Riot Accounts, We guarantee the lowest of prices. We provide limited offers. Affordable Valorant and LoL Accounts For Sale - Verified / Unverified. 24/7 Support. Many products to chose from." />
+  <!-- <meta property="og:image" content="https://metatags.io/images/meta-tags.png" /> -->
+
+  <!-- Twitter -->
+  <!-- <meta property="twitter:card" content="summary_large_image" /> -->
+  <meta property="twitter:url" content="https://metatags.io/" />
+  <meta property="twitter:title" content="ValoHub | Valorant & LOL Accounts" />
+  <meta property="twitter:description"
+    content="Purchase Affordable Riot Accounts, We guarantee the lowest of prices. We provide limited offers. Affordable Valorant and LoL Accounts For Sale - Verified / Unverified. 24/7 Support. Many products to chose from." />
+  <!-- <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" /> -->
 </head>
 
 <body>
